crates/snforge-scarb-plugin/tests/integration/single_attributes/snapshots/integration__single_attributes__should_panic__work_with_expected_string_escaped.snap
---
source: tests/integration/single_attributes/should_panic.rs
expression: format_output(&result)
---
fn empty_fn() {
    if snforge_std::_internals::is_config_run() {
        let mut data = array![];
        snforge_std::_internals::config_types::ShouldPanicConfig {
            expected: snforge_std::_internals::config_types::Expected::ByteArray(
                "can\"t \0 null byte",
            ),
        }
            .serialize(ref data);
        starknet::testing::cheatcode::<'set_config_should_panic'>(data.span());
        return Default::default();
    };
}
